--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
         </form>        
 
     </main>
+
+    <script src="CLASSES/Utils.js"></script>
+    <script src="SCRIPTS/User.js"></script>
+    <script src="SCRIPTS/Execution.js"></script>
     
 </body>
 </html>
