responsive and working

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 
             <div id="container-checkbox">
 
-                <input type="radio" name="gender" id="male">
+                <input type="radio" name="gender" id="male" value="masculino">
                 <label for="male" class="title-gender">Masculino</label>
 
-                <input type="radio" name="gender" id="female">
+                <input type="radio" name="gender" id="female" value="feminino">
                 <label for="" class="title-gender">Feminino</label>
 
             </div>
