--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div id="clients">
 
-            <h2 id="title-clients">CLIENTES</h2>
+            <h2 id="title-clients">CLIENTES (0)</h2>
 
         </div>
 
@@ -30,13 +30,13 @@
             <h2 id="title-form">FORMULÁRIO</h2>
 
             <label for="name" class="title-label">NOME</label>
-            <input type="text" id="name" placeholder="Digite seu nome">
+            <input type="text" id="name" placeholder="Digite seu nome" required>
 
             <label for="email" class="title-label">EMAIL</label>
-            <input type="text" id="email" placeholder="Digite seu email">
+            <input type="text" id="email" placeholder="Digite seu email" required>
 
             <label for="input-date" class="title-label">DATA DE NASCIMENTO</label>
-            <input type="date" id="input-date">
+            <input type="date" id="input-date" required>
 
             <h3>SELECIONE O SEXO</h3>
 
