--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
 
             </div>
 
+            <div id="container-admin">
+
+                <label for="admin" id="title-admin">Administrador</label>
+                <input type="checkbox" name="admin" value="admin" id="input-admin">
+
+            </div>
+
             <label for="photo" id="title-photo">FOTO</label>
             <input type="file" name="photo" id="photo">
 
