--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="clients">
 
             <h2 class="title-clients" id="title-clients">CLIENTES (0)</h2>
-            <h2 class="title-clients" id="title-admin">ADMIN (0)</h2>
+            <h2 class="title-clients" id="title-admin-top">ADMIN (0)</h2>
 
         </div>
 
